force-app/main/default/objects/Menu__c/Menu__c.object-meta.xml
<CustomObject>
    <description>Represents the collection of items offered by a storefront. This object serves as a system of record for managing menu details, including item names, descriptions, prices, availability, and categories, ensuring accurate and up-to-date information is displayed to customers.</description>
    <label>Menu</label>
    <nameField>
        <displayFormat>Menu-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Menus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>