force-app/main/default/objects/Menu__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the menu is currently active and visible to customers.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>