force-app/main/default/objects/Menu__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description of the menu (e.g., &quot;Seasonal specials&quot; or &quot;Signature dishes&quot;).</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>