force-app/main/default/objects/Menu__c/fields/Menu_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Menu_Display_Name__c</fullName>
    <label>Menu Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>