force-app/main/default/objects/Menu__c/fields/Storefront__c.field-meta.xml
<CustomField>
    <fullName>Storefront__c</fullName>
    <description>Links the menu to the specific storefront it belongs to.</description>
    <label>Storefront</label>
    <referenceTo>Storefront__c</referenceTo>
    <relationshipLabel>Menus</relationshipLabel>
    <relationshipName>Menus</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>